zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__base_floating_layout_is_included_in_swap_layouts.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 7605
expression: snapshot
---
00 (C): ┌ swarm:tab-bar ─────────────────────────────────┌ swarm:status-bar ────────────────────────────── PIN [ ] ┐──────────┐
01 (C): │I am a tab bar                                   │I am a                                                    │          │
02 (C): │                                                 │status bar                                                │          │
03 (C): │                                                 │                                                          │          │
04 (C): │                                                 │                                                          │          │
05 (C): │                             ┌ Pane #3 ──────────│                                                          │          │
06 (C): │                             │                   │                                                          │          │
07 (C): │                             │                   │                                                          │          │
08 (C): │                             │                   │                                                          │          │
09 (C): └─────────────────────────────│                   └──────────────────────────────────────────────────────────┘          │
10 (C): ┌ command1 ───────────────────│                   ┌ command2 ─────────────────────────────────────── PIN [ ] ┐          │
11 (C): │                             │                   │                                                          │          │
12 (C): │                             │                   │                                                          │          │
13 (C): │                             │                   │                                                          │          │
14 (C): │                Waiting to ru└───────────────────│                Waiting to run: command2                  │          │
15 (C): │                                                 │                                                          │          │
16 (C): │     <ENTER> run, <ESC> drop to shell, <Ctrl-c> e│     <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit      │          │
17 (C): │                                                 │                                                          │          │
18 (C): │                                                 │                                                          │          │
19 (C): └─────────────────────────────────────────────────└──────────────────────────────────────────────────────────┘──────────┘

